Fixed bug where repeat menu covered main menu when main menu was on the side

--- a/src/styling/NavMenu.css
+++ b/src/styling/NavMenu.css
@@ -2,60 +2,26 @@
     /* To center it */
     left: 50%;
     transform: translateX(-50%);
-    bottom: 0px;
     position: absolute;
-
-    /* grid-template-rows: 1fr 1fr; */
-    /* grid-template-columns: 1fr 1fr; */
     display: flex;
     flex-direction: row;
-    /* grid-template-areas:
-        "item1 item2"
-        "item3 item4"; */
-
-    /* #pos-nav-menu { grid-area: item1; } */
-
 
     #sub-grid {
         display: flex;
         flex-direction: column;
         align-items: center;
-        /* grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
-        /* grid-template-rows: subgrid; */
-        /* grid-template-areas:
-            "item1 item4"
-            "item2 item3";
-        #scale-nav-menu { grid-area: item1; }
-        #nav-selection-button { grid-area: item2; }
-        #home-button { grid-area: item3; } */
     }
 
     #sub-sub-grid{
         display: flex;
         flex-direction: row;
-        /* align-items: center; */
         align-self: center;
     }
 
     background-color: rgba(20,20,20, .8);
     border-radius: 10px;
-    border-end-start-radius: 0px;
-    border-bottom-right-radius: 0px;
-    /* margin: 10px; */
-    padding: 10px;
-    /* padding-left: 10px; */
-    /* padding-right: 25px; */
-    /* padding-bottom: 100px; */
 
-    /* align-items: center; */
-    /* flex-flow: wrap; */
-    /* align-content: space-between; */
-    /* display: grid; */
-    /* grid-template-columns: 1fr 1fr; */
-    /* flex-direction: row; */
-    /* justify-content: space-between; */
-    /* cursor: grab; */
+    padding: 10px;
     z-index: 1;
     color: white;
 
